--- a/code.ipynb
+++ b/code.ipynb
@@ -10,6 +10,7 @@
     "import sys\n",
     "import cv2\n",
     "import torchvision\n",
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +455,7 @@
        ")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,10 +483,248 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_embedded_databases(root_img_path):\n",
+    "    images_paths, images_embedding = [], []\n",
+    "    \n",
+    "    for folder in os.listdir(root_img_path):\n",
+    "        full_folder = os.path.join(root_img_path, folder)\n",
+    "        if os.path.isdir(full_folder):\n",
+    "            for name in os.listdir(full_folder):\n",
+    "                img_path = full_folder + \"/\" + name\n",
+    "                img_face = face_preprocessor(Image.open(img_path).convert(\"RGB\")).to(device)\n",
+    "                with torch.no_grad():\n",
+    "                    embeded_img_face = model(img_face[None, :])[0].cpu().numpy()\n",
+    "                \n",
+    "                images_embedding.append(embeded_img_face)\n",
+    "                images_paths.append(name.split(\".\")[0])\n",
+    "    \n",
+    "    images_paths = np.array(images_paths)\n",
+    "    images_embedding = np.array(images_embedding)\n",
+    "    \n",
+    "    return images_paths, images_embedding/np.linalg.norm(images_embedding, axis=1, keepdims=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 512)\n"
+     ]
+    }
+   ],
+   "source": [
+    "root_img_path = \"./faces_database/\"\n",
+    "images_paths, images_embedding = get_embedded_databases(root_img_path)\n",
+    "print(images_embedding.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_path = \"./face_My.jpg\"\n",
+    "img_query = face_preprocessor(Image.open(query_path).convert(\"RGB\")).to(device)\n",
+    "with torch.no_grad():\n",
+    "    emb_query = model(img_query[None, :]).cpu().numpy()\n",
+    "    emb_query = emb_query/np.linalg.norm(emb_query)\n",
+    "\n",
+    "cos_measure = images_embedding @ emb_query.T\n",
+    "print(images_paths[cos_measure.argmax()].split(\"_\")[0])\n",
+    "\n",
+    "# mse_measure = np.linalg.norm(images_embedding - emb_query, axis=-1)\n",
+    "# images_paths[mse_measure.argmin()].split(\"_\")[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recognize in one image (leverage OD with Yolov5)\n",
+    "Follow these steps:\n",
+    "\n",
+    "- Get all images in database to Insightface model to create database vectors.\n",
+    "- Crop query images by Yolov5, then feed it into Insightface model to create query vector.\n",
+    "- Compare query image's vector with database vectors with cosine similarity or MSE."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fusing layers... \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pc\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\nn\\functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  ..\\c10/core/TensorImpl.h:1156.)\n",
+      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sys.path.insert(0, \"yolov5_face\")\n",
+    "from models.experimental import attempt_load\n",
+    "from utils.datasets import letterbox\n",
+    "from utils.general import check_img_size, non_max_suppression_face, scale_coords\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = attempt_load(\"yolov5_face/yolov5m-face.pt\", map_location=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "converted_size = 640\n",
+    "conf_threshold = 0.4\n",
+    "iou_threshold = 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def resize_image(img0, img_size):\n",
+    "    h0, w0 = orgimg.shape[:2]  # orig hw\n",
+    "    r = img_size / max(h0, w0)  # resize image to img_size\n",
+    "    if r != 1:  # always resize down, only resize up if training with augmentation\n",
+    "        interp = cv2.INTER_AREA if r < 1  else cv2.INTER_LINEAR\n",
+    "        img0 = cv2.resize(img0, (int(w0 * r), int(h0 * r)), interpolation=interp)\n",
+    "\n",
+    "    imgsz = check_img_size(img_size, s=model.stride.max())  # check img_size\n",
+    "    img = letterbox(img0, new_shape=imgsz)[0]\n",
+    "\n",
+    "    # Convert\n",
+    "    img = img[:, :, ::-1].transpose(2, 0, 1).copy()  # BGR to RGB, to 3x416x416\n",
+    "\n",
+    "    img = torch.from_numpy(img).to(device)\n",
+    "    img = img.float()  # uint8 to fp16/32\n",
+    "    img /= 255.0  # 0 - 255 to 0.0 - 1.0\n",
+    "    \n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Sizes of tensors must match except in dimension 2. Got 7 and 8 (The offending index is 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\nn\\modules\\module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1049\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[0;32m   1050\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[1;32m-> 1051\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1052\u001b[0m         \u001b[1;31m# Do not call functions when jit is used\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1053\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32md:\\AI Insights\\2021\\Practice Projects\\face-recognition\\yolov5_face\\models\\yolo.py\u001b[0m in \u001b[0;36mforward\u001b[1;34m(self, x, augment, profile)\u001b[0m\n\u001b[0;32m    178\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m  \u001b[1;31m# augmented inference, train\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    179\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 180\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforward_once\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprofile\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# single-scale inference, train\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    181\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    182\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mforward_once\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprofile\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32md:\\AI Insights\\2021\\Practice Projects\\face-recognition\\yolov5_face\\models\\yolo.py\u001b[0m in \u001b[0;36mforward_once\u001b[1;34m(self, x, profile)\u001b[0m\n\u001b[0;32m    194\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'%10.1f%10.0f%10.1fms %-40s'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mo\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    195\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 196\u001b[1;33m             \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# run\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    197\u001b[0m             \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m \u001b[1;32melse\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# save output\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    198\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\nn\\modules\\module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1049\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[0;32m   1050\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[1;32m-> 1051\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1052\u001b[0m         \u001b[1;31m# Do not call functions when jit is used\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1053\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32md:\\AI Insights\\2021\\Practice Projects\\face-recognition\\yolov5_face\\models\\common.py\u001b[0m in \u001b[0;36mforward\u001b[1;34m(self, x)\u001b[0m\n\u001b[0;32m    286\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    287\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 288\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    289\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    290\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Sizes of tensors must match except in dimension 2. Got 7 and 8 (The offending index is 0)"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "path_query = \"./test_people.jpg\"\n",
+    "orgimg = cv2.imread(path_query)  # BGR \n",
+    "img = resize_image(orgimg.copy(), converted_size)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    pred = model(img[None, :])[0]\n",
+    "    \n",
+    "# Apply NMS\n",
+    "det = non_max_suppression_face(pred, conf_threshold, iou_threshold)[0]\n",
+    "bboxs = np.int32(scale_coords(img.shape[1:], det[:, :4], orgimg.shape).round().cpu().numpy())\n",
+    "    \n",
+    "\n",
+    "for i in range(len(bboxs)):\n",
+    "    x1, y1, x2, y2 = bboxs[i]\n",
+    "    roi = orgimg[y1:y2, x1:x2]\n",
+    "    roi = face_preprocessor(Image.fromarray(roi)).to(device)\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        emb_query = model(roi[None, :]).cpu().numpy()\n",
+    "        emb_query = emb_query/np.linalg.norm(emb_query)\n",
+    "    \n",
+    "    scores = (emb_query @ images_embedding.T)[0]\n",
+    "    # scores = np.linalg.norm(norm_roi_emb - norm_images_emb)\n",
+    "    id_min = np.argmax(scores)\n",
+    "    score = scores[id_min]\n",
+    "    name = images_paths[id_min]\n",
+    "    \n",
+    "    if score < 0.2:\n",
+    "        caption= \"UN_KNOWN\"\n",
+    "    else:\n",
+    "        caption = f\"{name.split('_')[0].upper()}:{score:.2f}\"\n",
+    "\n",
+    "    t_size = cv2.getTextSize(caption, cv2.FONT_HERSHEY_PLAIN, 2, 2)[0]\n",
+    "    cv2.rectangle(orgimg, (x1, y1), (x2, y2), (0, 146, 230), 3)\n",
+    "    cv2.rectangle(\n",
+    "        orgimg, (x1, y1), (x1 + t_size[0], y1 + t_size[1]), (0, 146, 230), -1)\n",
+    "    cv2.putText(orgimg, caption, (x1, y1 + t_size[1]), cv2.FONT_HERSHEY_PLAIN, 2, [255, 255, 255], 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(5, 3), dpi=300)\n",
+    "plt.axis('off')\n",
+    "plt.imshow(orgimg[:,:,::-1]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test video recognition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = []\n",
+    "fps = 25\n",
+    "numsecond = 10"
+   ]
   }
  ],
  "metadata": {
